# Build_File_Tracker

./: .gitignore  CONTRIBUTING.md  DOCUMENTATION_OPTIMIZATION_V2.md  DOCUMENTATION_REORGANIZATION.md  LICENSE  README.md  buildfiletracker_cli.py  quickstart.sh  setup_tracking.sh
.github/: copilot-instructions.md
docs/: API.md  ARCHITECTURE.md  CROSS_PLATFORM_SETUP.md  FAQ.md  FILE_TYPES.md  FILE_TYPES_QUICK_REF.md  INDEX.md  INSTALLATION.md  INTEGRATION.md  LINKING_TYPES.md  PLATFORM_SUPPORT.md  USER_GUIDE.md  USING_WITH_YOUR_PROJECTS.md
examples/: binary_tracking_example.py  platform_test.py  python_example.py  simple_platform_test.py
examples/cmake_example/: CMakeLists.txt  README.md
examples/cmake_example/src/: main.c
examples/makefile_example/: Makefile  README.md
examples/makefile_example/lib/libmath/: unused_ops.c  unused_ops.h
examples/makefile_example/lib/libutil/: utils.c  utils.h
examples/makefile_example/src/: main.c
include/: buildfiletracker.h  buildfiletracker_files.h
integrations/: track_build.bat  track_build.sh  track_build_universal.sh
integrations/cmake/: FileTracker.cmake
integrations/makefile/: filetracker.mk
integrations/python/: buildfiletracker.py
integrations/yocto/: filetracker.bbclass
python/: analyzer.py  merge_reports.py  report_generator.py  requirements.txt  tracker.py  windows_tracker.py
python/buildfiletracker/: __init__.py  filetypes.py  reporters.py
src/: Makefile  buildfiletracker_core.c  file_interceptor.c  file_tracker.c  file_tracker.h
